Создать тестовый класс HttpTaskServerTest, реализовать тесты для задач